fix slider img sizing for mobile/tablet. hide text content title on mobile/tablet.

--- a/css/responsive/desktop.styl
+++ b/css/responsive/desktop.styl
@@ -24,6 +24,9 @@ $footer-height = 80px
       display: block
     .project-drawings
       display: none
+      
+.project-text-title 
+  display: initial
   
 .swiper-container
   margin-top: $header-height + $margin-basic
