--- a/css/responsive/mobile.styl
+++ b/css/responsive/mobile.styl
@@ -83,4 +83,13 @@ body.menu-active
   display: none
   
 // ******************************************************
+
+// SINGLE PROJECT
+
+.project-text-title 
+  display: none
+
+.swiper-slide
+  img 
+    max-height: 300px
   
