--- a/css/responsive/tablet.styl
+++ b/css/responsive/tablet.styl
@@ -59,4 +59,10 @@ body.menu-active
   display: block
   
 // ******************************************************
+
+// SINGLE PROJECT
+
+.swiper-slide
+  img 
+    max-height: 500px
   
