--- a/css/site.styl
+++ b/css/site.styl
@@ -76,6 +76,17 @@ img
   
 // ******************************************************
 
+// SINGLE PROJECT
+
+.swiper-wrapper
+  align-items: center
+  
+.swiper-slide 
+  img 
+    width: auto
+  
+// ******************************************************
+
 // MEDIA QUERIES
 
 $gutter = 16px 
